Progress Test Updated

--- a/ProgressTest2/SQLite/app/src/main/AndroidManifest.xml
+++ b/ProgressTest2/SQLite/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SQLite"
         tools:targetApi="31">
         <activity
+            android:name=".ViewProducts"
+            android:exported="false" />
+        <activity
+            android:name=".UpdateProduct"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
